--- a/Graphic/SlotMachine2/SlotMachineGame/SlotMachineGame-Info.plist
+++ b/Graphic/SlotMachine2/SlotMachineGame/SlotMachineGame-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Slot Flag</string>
+	<string>Slot BigWin</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
